--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title,"home") %>
-<h1>StaticPage#home</h1>
-<p>Find me in app/views/static_page/home.html.erb,sample app</p>
+<div class="home-container">
+  <%= link_to "","#",class:"wzx" %>
+  <h3>Welcome to Wayne.Twitter</h3>
+  <p>I made it by ruby on rails, pretty cool : )</p>
+  <%= link_to "Sign up",signup_path,class:"btn btn-lg btn-warning"%>
+</div>
