--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     %>
     <ul class="nav nav-pills pull-right" >
       <li><%= link_to "Home",root_path %></li>
-      <li><%= link_to "Help",help_path %></li>
+      <li><%= link_to "Contact",help_path %></li>
       <li><%= link_to "Sign in","#",class:"btn btn-primary btn-sm"%></li>
     </ul>
   </div>
