--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title,"home") %>
 <div class="home-container">
-  <%= link_to "","#",class:"wzx" %>
+  <%= link_to "","http://instagram.com/pptalent",class:"wzx" %>
   <h3>Welcome to Wayne.Twitter</h3>
   <p>I made it by ruby on rails, pretty cool : )</p>
   <%= link_to "Sign up",signup_path,class:"btn btn-lg btn-warning"%>
