--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,24 @@
-<p>sign up here</p>
+<div class="container signup">
+  <form role="form">
+    <div class="form-group">
+      <label for="exampleInputEmail1">User name</label>
+      <input type="email" class="form-control"  placeholder="User name">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control"  placeholder="Email address">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control"  placeholder="Password">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Confirm password</label>
+      <input type="password" class="form-control"  placeholder="Confirm password">
+    </div>
+
+    <button type="submit" class="btn btn-default btn-success">Ready to go !</button>
+  </form>
+
+
+</div>
