--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,29 @@
 <div class="container signup">
-  <form role="form">
-    <div class="form-group">
-      <label for="exampleInputEmail1">User name</label>
-      <input type="email" class="form-control"  placeholder="User name">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control"  placeholder="Email address">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control"  placeholder="Password">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Confirm password</label>
-      <input type="password" class="form-control"  placeholder="Confirm password">
-    </div>
+  <% if @user.errors.any? %>
+    <%= render 'shared/user_errors' %>
+  <% end %>
+  <%= form_for(@user) do |f| %>
+      <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name,placeholder:"User name",class:"form-control" %>
+      </div>
 
-    <button type="submit" class="btn btn-default btn-success">Ready to go !</button>
-  </form>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.text_field :email,placeholder:"Email address",class:"form-control" %>
+      </div>
 
+      <div class="form-group">
+        <%= f.label :password %>
+        <%= f.password_field :password,placeholder:"Password",class:"form-control" %>
+      </div>
 
+      <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation,placeholder:"Confirm password",class:"form-control" %>
+      </div>
+
+      <%= f.submit "Ready to go !",class:"btn btn-default btn-success",nickName:"create_user" %>
+
+  <% end %>
 </div>
