--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "style";
 //universal
 body{
 
@@ -15,12 +16,12 @@ body{
   padding:13px 0px 10px;
   border-bottom:1px solid #ddd;
 //  border-top:8px solid $blue;
-  ul{
+  ul.main{
     position:relative;
     top:10px;
     right:50px;
-    li{
-      a:not(.btn){
+    &>li{
+      &>a:not(.btn){
         color:#9d9d9d;
       }
       .btn{
@@ -29,6 +30,14 @@ body{
         margin-left:10px;
         &:hover{
           background:#3276B1;
+        }
+      }
+      &.user-header-login{
+        &>a{
+          color:#222
+        }
+        .log-out{
+          color:lighten($red,10%);
         }
       }
     }
