--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,25 @@
     <%= link_to "Wayne.Twitter",root_path,id:"logo",
                 class:"navbar-brand"
     %>
-    <ul class="nav nav-pills pull-right" >
+    <ul class="nav nav-pills pull-right main" >
       <li><%= link_to "Home",root_path %></li>
       <li><%= link_to "Contact",help_path %></li>
-      <li><%= link_to "Log in",login_path,class:"btn btn-primary btn-sm"%></li>
+      <% if sign_in? %>
+          <% user=current_user %>
+          <li class="dropdown user-header-login">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= user.name %> <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%=link_to "Profile",user %></li>
+              <li><%=link_to "Setting",'#' %></li>
+              <li class="divider"></li>
+
+              <li><%=link_to "Log out",logout_path,class:"log-out",method:"delete"%></li>
+            </ul>
+          </li>
+      <% else %>
+          <li><%= link_to "Log in",login_path,class:"btn btn-primary btn-sm"%></li>
+      <% end %>
     </ul>
   </div>
 </div>
