--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <% if @user.errors.any? %>
     <%= render 'shared/user_errors' %>
   <% end %>
-  <%= form_for(@user) do |f| %>
+  <%= form_for @user do |f| %>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name,placeholder:"User name",class:"form-control" %>
