--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -23,6 +23,17 @@
 .user-show{
   padding-top:21px;
   .user-header-left{
+    box-sizing:border-box;
+    float:left;
+    width:35%;
+    background-color:rgba(0,0,0,0.03);
+    border:1px solid rgba(0,0,0,0.1);
+    &:after{
+      content:"";
+      display:block;
+      clear:both;
+    }
+    padding:25px 0;
     .user-avatar{
       $width:80px;
       border-radius:$width;
@@ -35,12 +46,49 @@
       font-size:24px;
       color:#222;
     }
-    box-sizing:border-box;
-    width:45%;
+    .user-info{
+      box-sizing:border-box;
+      width:33.3%;
+      float:left;
+      margin-top:8px;
+      p{
+        text-align:center;
+        width:100%;
+        text-overflow:ellipsis;
+        overflow: hidden;
+        white-space:nowrap;
+        &:first-of-type{
+          font-size:29px;
+          margin-bottom:0px;
+        }
+        &:nth-of-type(2){
+          color:#888;
+        }
+      }
+      &:nth-of-type(1){
+        p:nth-of-type(1){
+          color:$primary;
+        }
+      }
+      &:nth-of-type(2){
+        p:nth-of-type(1){
+          color:$red;
+        }
+      }
+      &:nth-of-type(3){
+        p:nth-of-type(1){
+          color:$orange;
+        }
+      }
+    }
   }
   .user-header-right{
     box-sizing:border-box;
-    width:55%;
+    float:left;
+    width:65%;
+    .pagination{
+      float:right;
+    }
   }
 }
 .edit_user{
