--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,20 @@
 <body>
 <div class="navbar">
   <div class="container">
-    <%= link_to "Wayne.Twitter",root_path,id:"logo",
+    <%= link_to "PPTwitter",root_path,id:"logo",
                 class:"navbar-brand"
     %>
     <ul class="nav nav-pills pull-right main" >
       <li><%= link_to "Home",root_path %></li>
       <li><%= link_to "People",users_path %></li>
-      <li><%= link_to "Contact",help_path %></li>
+  
       <% if sign_in? %>
           <% user= current_user %>
           <li class="dropdown user-header-login">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= user.name %> <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><%=link_to "Profile",user %></li>
+              <li><%=link_to "Me",user %></li>
               <li><%=link_to "Setting",edit_user_path(user) %></li>
               <li class="divider"></li>
 
