--- a/app/assets/stylesheets/static_page.css.scss
+++ b/app/assets/stylesheets/static_page.css.scss
@@ -1,3 +1,72 @@
 // Place all the styles related to the static_page controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "style";
+
+.talking
+{
+  padding:0 13px;
+  &>p{
+    margin-bottom:0px;
+  }
+  ul.content-list{
+    list-style-type: none;
+    padding:0px;
+    &>li{
+      padding:12px 0;
+      border-bottom:1px solid rgba(0,0,0,0.1);
+      position:relative;
+      &:after{
+        @include clear;
+        width:100%;
+      }
+      $img-width:40px;
+      &>a.link-user{
+        display:block;
+        width:$img-width;
+        height:$img-width;
+        float:left;
+        box-sizing:border-box;
+        position:relative;
+        margin-right:20px;
+        &>img{
+          @include border-radius($img-width);
+        }
+        &:after{
+          content:":";
+          position:absolute;
+          top:6px;
+          right:-12px;
+          font-size:20px;
+        }
+      }
+      &>p{
+        height:$img-width;
+        float:left;
+        @include box-sizing;
+        width:calc(100% - 70px);
+        width:-moz-calc(100% - 140px);
+        @include word-break;
+        margin:0px;
+        line-height:40px;
+        color:#666;
+      }
+      &>.comment{
+        font-size:12px;
+        cursor:pointer;
+//        text-decoration:underline;
+        float:left;
+        margin-left:0px;
+        position:absolute;
+        bottom:13px;
+        @include transition(color);
+        &:hover{
+            color:#222;
+        }
+      }
+    }
+  }
+  .pagination{
+    float:right;
+  }
+}
