--- a/app/assets/stylesheets/static_page.css.scss
+++ b/app/assets/stylesheets/static_page.css.scss
@@ -38,6 +38,7 @@
           top:6px;
           right:-12px;
           font-size:20px;
+          color:#777;
         }
       }
       &>p{
@@ -54,7 +55,6 @@
       &>.comment{
         font-size:12px;
         cursor:pointer;
-//        text-decoration:underline;
         float:left;
         margin-left:0px;
         position:absolute;
