--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -53,6 +53,7 @@
       margin-left:10px;
       textarea{
         height:60px;
+        resize:none;
         max-height:100px;
         min-height:60px;
         width:100%;
