--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,6 +2,6 @@
   <p><%= micropost.content %></p>
   <p><%= time_ago_in_words(micropost.created_at) %></p>
   <%= link_to 'delete',micropost,method: :delete,
-                                 data:{confirm:"you sure ?"}
+                                 data:{confirm:"Delete this pptwitter ?"}
   %>
 </li>
