--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="form">
-  <textarea placeholder="leave your comment here ..." class="form-control"></textarea>
+  <textarea placeholder="leave your comment here ..." class="form-control my_post_comment"></textarea>
   <input type="button" class="btn btn-warning comment-submit-button" value="comment" id='<%= @comment.micropost_id%>'/>
 </div>
 <% if @comment.errors.any? %>
